añadiendo rutas en app.py y actualizando el index.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,14 +75,14 @@ header {
     z-index: 1;
 }
 
-.nav-link{
+.contenido a{
     color: red;
     padding: 20px 60px;
     text-decoration: none;
     display: block;
 }
 
-.nav-link:hover {
+.contenido a:hover {
     background-color: red;
     color: white;
 }
