--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@
                         </div>
                         <img src="{{ url_for('static', filename='images/images(1).jpeg') }}" alt="logo">
                     </div>
-                    <a href="Ayuda.html" class="nav-link">Ayuda</a>
+                    <a href="{{ url_for('Ayuda')}}">Ayuda</a>
                     <a href="index.html" class="nav-link">Inicio</a>
-                    <a href="Sugerencias.html" class="nav-link">Sugerencias de Mejora</a>
+                    <a href="{{ url_for('Sugerencias')}}">Sugerencias de Mejora</a>
                 </div> 
             </div>
             
