index acondicionado para app.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,10 @@
                         <div class="email">
                             <p>comercial.malabo@conexxiaeg.com</p>
                         </div>
-                        <img src="{{ url_for('static', filename='images/images(1).jpeg') }}" alt="logo">
+                        <img src="{{ url_for('static', filename='images/images(1).jpeg') }}" alt="logo" class="imagen">
                     </div>
                     <a href="{{ url_for('Ayuda')}}">Ayuda</a>
-                    <a href="index.html" class="nav-link">Inicio</a>
+                    <a href="{{ url_for('index')}}">Inicio</a>
                     <a href="{{ url_for('Sugerencias')}}">Sugerencias de Mejora</a>
                 </div> 
             </div>
