Sugerencias.html acondicionado para app.py

--- a/templates/Sugerencias.html
+++ b/templates/Sugerencias.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitor de Baterías</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon_none.png') }}" type="image/x-icon">
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </head>
 <body>
     <header>
@@ -17,17 +18,17 @@
                        <div class="email">
                             <p>comercial.malabo@conexxiaeg.com</p>
                         </div>
-                        <img src="static/images (1).jpeg" alt="Fondo" class="imagen">
+                        <img src="{{ url_for('static', filename='images/images(1).jpeg') }}" alt="logo" class="imagen">
                     </div>
-                    <a href="Ayuda.html" class="nav-link">Ayuda</a>
-                    <a href="index.html" class="nav-link">Inicio</a>
-                    <a href="Sugerencias.html" class="nav-link">Sugerencias de Mejora</a>
+                    <a href="{{ url_for('Ayuda')}}">Ayuda</a>
+                    <a href="{{ url_for('index')}}">Inicio</a>
+                    <a href="{{ url_for('Sugerencias')}}">Sugerencias de Mejora</a>
                 </div> 
             </div>
             
             <div class="logo-conexia">
                 <div class="logo">
-                    <img src="static/conexxia-logo.png" alt="Ejemplo">
+                    <img src="{{ url_for('static', filename='images/conexxia-logo.png') }}" alt="logo">
                 </div>
                 <div class="text">
                     <h1>Monitor de Baterrias Conexia</h1>
@@ -54,10 +55,10 @@
                 <p>info@identicge.org</p>
                 <h3>Síguenos</h3>
                 <div class="redes-2">
-                    <a href="https://www.facebook.com/identicge?__cft__[0]=AZXmvpmpwyG4fJc7JTnxreaTQfzu2x1r8mOEWLV4gKicDgZEn5KON7pAYOwR3zgheeD6wTVM6td5tMcsudxrfhL3f9wJabUVtv2_joDG7LJwyC2pujO8vzoK1PDOf8u9t2asZ6QpFMm6QSdweXXqWepJk_nfOuvZnTcYMGtENvT07VbZB7MxxmzQXMeuHq8FV2A&__tn__=-UC%2CP-R" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo"></a>
-                    <a href="https://www.instagram.com/identic_fundacion?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" aria-label="Instagram"><img src="static/instagram-logo.png" alt="Ejemplo"></a>
-                    <a href="#" aria-label="Whatsapp"><img src="static/whatsapp-logo.png" alt="Ejemplo"></a>
-                    <a href="https://www.youtube.com/@identicfundacion" aria-label="Youtube"><img src="static/youtube-logo.png" alt="Ejemplo"></a>
+                    <a href="https://www.facebook.com/identicge?__cft__[0]=AZXmvpmpwyG4fJc7JTnxreaTQfzu2x1r8mOEWLV4gKicDgZEn5KON7pAYOwR3zgheeD6wTVM6td5tMcsudxrfhL3f9wJabUVtv2_joDG7LJwyC2pujO8vzoK1PDOf8u9t2asZ6QpFMm6QSdweXXqWepJk_nfOuvZnTcYMGtENvT07VbZB7MxxmzQXMeuHq8FV2A&__tn__=-UC%2CP-R" aria-label="Facebook"><img src="{{ url_for('static', filename='images/Facebook-logo.png') }}" alt="facebook"></a>
+                    <a href="https://www.instagram.com/identic_fundacion?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" aria-label="Instagram"><img src="{{ url_for('static', filename='images/instagram-logo.png') }}" alt="instagram"></a>
+                    <a href="https://www.youtube.com/@identicfundacion" aria-label="Youtube"><img src="{{ url_for('static', filename='images/youtube-logo.png') }}" alt="youtube"></a>
+                    <a href="https://whatsapp.com/channel/0029VajFUb2EwEjnTUrg3p1Y" aria-label="Whatsapp"><img src="{{ url_for('static', filename='images/whatsapp-logo.png') }}" alt="Whatsapp"></a>
                 </div>
                         
                     </div>
@@ -89,6 +90,5 @@
             </div>
         </div>
     </main>
-    <script src="static/script.js"></script>
 </body>
 </html>
