poniedo color de texto a las páginas para marcar donde nos encontramos

--- a/templates/Ayuda.html
+++ b/templates/Ayuda.html
@@ -20,7 +20,7 @@
                         </div>
                         <img src="{{ url_for('static', filename='images/images(1).jpeg') }}" alt="logo" class="imagen">
                     </div>
-                    <a href="{{ url_for('Ayuda')}}">Ayuda</a>
+                    <a href="{{ url_for('Ayuda')}}" style="color: blue;">Ayuda</a>
                     <a href="{{ url_for('index')}}">Inicio</a>
                     <a href="{{ url_for('Sugerencias')}}">Sugerencias de Mejora</a>
                 </div> 
