--- a/templates/Sugerencias.html
+++ b/templates/Sugerencias.html
@@ -22,7 +22,7 @@
                     </div>
                     <a href="{{ url_for('Ayuda')}}">Ayuda</a>
                     <a href="{{ url_for('index')}}">Inicio</a>
-                    <a href="{{ url_for('Sugerencias')}}">Sugerencias de Mejora</a>
+                    <a href="{{ url_for('Sugerencias')}}" style="color: blue;">Sugerencias de Mejora</a>
                 </div> 
             </div>
             
@@ -83,7 +83,6 @@
                             <textarea  id="massage" class="form-contac" required></textarea>
                         </div>
                         <button type="submit" class="bot">Enviar</button>
-            </div>
             
                     </form>
                 </div>
