--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                         <img src="{{ url_for('static', filename='images/images(1).jpeg') }}" alt="logo" class="imagen">
                     </div>
                     <a href="{{ url_for('Ayuda')}}">Ayuda</a>
-                    <a href="{{ url_for('index')}}">Inicio</a>
+                    <a href="{{ url_for('index')}}" style="color: blue;">Inicio</a>
                     <a href="{{ url_for('Sugerencias')}}">Sugerencias de Mejora</a>
                 </div> 
             </div>
