--- a/static/css/style.css
+++ b/static/css/style.css
@@ -291,9 +291,7 @@ textarea.form-contac{
 }
 .bateria-container {
     position: relative;
-    justify-self: center;
-    margin-top: 10%;
-    display: grid;
+    margin: 20px auto;
     width: 100px;
     height: 200px;
     border: 5px solid #333;
@@ -304,11 +302,13 @@ textarea.form-contac{
 .bateria-nivel {
     position: absolute;
     bottom: 0;
-    height: 100%;
-    width: 0%;
+    left: 0;
+    width: 100%;        
+    height: 0%;        
     background-color: #4caf50;
-    transition: width 0.5s ease;
+    transition: height 0.5s ease;
 }
+
 .bateria-tapita {
     position: absolute;
     top: -12px;
@@ -318,6 +318,7 @@ textarea.form-contac{
     background-color: #333;
     border-radius: 4px;
 }
+
 .texto {
     font-size: 16px;
     margin-top: 10px;
