--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Monitor de Baterías</title>
-  <link rel="icon" href="{{ url_for('static', filename='images/favicon_none.png') }}">
+  <link rel="icon" href="{{ url_for('static', filename='images/Favicon_none.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   
@@ -36,7 +36,10 @@
             </div>
         </div>
     </header>
+    <div class="Baterrias">
         <div id="contenedor-baterias"></div>
+    </div>
+        
     
     <footer>
         <div class="container-3">
