pruebas de baterria imagen 2

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -295,7 +295,7 @@ textarea.form-contac{
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.386);
 }
 .bateria-nivel {
-    position: static;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;        
@@ -313,7 +313,7 @@ textarea.form-contac{
     justify-self: center;
 }
 .bateria-tapita {
-    position: static;
+    position: relative;
     top: -12px;
     left: 35%;
     width: 30px;
