restaurando bateria a estilo de la rama dev

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,9 @@
         </div>
     </header>
 
-    <div id="contenedor-baterias"></div>
-
-        
+    <div class="bateria-container">
+        <div id="contenedor-baterias"></div>
+    </div>     
     
     <footer>
         <div class="container-3">
