--- a/static/css/style.css
+++ b/static/css/style.css
@@ -294,32 +294,42 @@ textarea.form-contac{
 .redes-2 img:hover{
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.386);
 }
+#contenedor-baterias {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+
 .bateria-container {
-    justify-self: center;
-    margin-top: 10%;
-    display: grid;
+    position: relative;
     width: 100px;
     height: 200px;
-    border: 5px solid #333;
+    border: 4px solid #333;
     border-radius: 8px;
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
+  overflow: hidden;
 }
+
 .bateria-nivel {
-    position: relative;
-    bottom: 0;
-    height: 100%;
-    width: 0%;
-    background-color: #4caf50;
-    transition: width 0.5s ease;
+  position: absolute;
+   bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background-color: #4caf50;
+  transition: height 0.5s ease;
 }
+
 .bateria-tapita {
-    position: absolute;
-    top: -12px;
-    left: 35%;
-    width: 30px;
-    height: 12px;
-    background-color: #333;
-    border-radius: 4px;
+  position: relative;
+  top: -12px;
+  left: 35%;
+  width: 30px;
+  height: 12px;
+  background-color: #333;
+  border-radius: 4px;
 }
 .texto {
     font-size: 16px;
