--- a/static/css/style.css
+++ b/static/css/style.css
@@ -295,41 +295,40 @@ textarea.form-contac{
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.386);
 }
 #contenedor-baterias {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 30px;
 }
 
 .bateria-container {
     position: relative;
-    width: 100px;
-    height: 200px;
-    border: 4px solid #333;
-    border-radius: 8px;
-  background-color: #f0f0f0;
-  overflow: hidden;
+    justify-self: center;
+    width: 100%;
+    height: 500px;
+    background-color: #f0f0f0;
+    overflow: hidden;
 }
 
 .bateria-nivel {
-  position: absolute;
-   bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 0%;
-  background-color: #4caf50;
-  transition: height 0.5s ease;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background-color: #4caf50;
+    transition: height 0.5s ease;
 }
 
 .bateria-tapita {
-  position: relative;
-  top: -12px;
-  left: 35%;
-  width: 30px;
-  height: 12px;
-  background-color: #333;
-  border-radius: 4px;
+    position: relative;
+    top: -12px;
+    left: 35%;
+    width: 30px;
+    height: 12px;
+    background-color: #333;
+    border-radius: 4px;
 }
 .texto {
     font-size: 16px;
