--- a/static/css/style.css
+++ b/static/css/style.css
@@ -305,8 +305,8 @@ textarea.form-contac{
 .bateria-container {
     position: relative;
     justify-self: center;
-    width: 100%;
-    height: 500px;
+    width: 100px;
+    height: 200px;
     background-color: #f0f0f0;
     overflow: hidden;
 }
