--- a/static/css/style.css
+++ b/static/css/style.css
@@ -296,7 +296,6 @@ textarea.form-contac{
 }
 #contenedor-baterias {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     margin-top: 30px;
@@ -307,6 +306,8 @@ textarea.form-contac{
     justify-self: center;
     width: 100px;
     height: 200px;
+    border-radius: 8px;
+    border-color: #333;
     background-color: #f0f0f0;
     overflow: hidden;
 }
