pruebas de baterría imagen 10

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -296,6 +296,7 @@ textarea.form-contac{
 }
 #contenedor-baterias {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     margin-top: 30px;
