--- a/static/css/style.css
+++ b/static/css/style.css
@@ -311,35 +311,36 @@ textarea.form-contac{
 }
 
 .bateria-container {
-    position: relative;
-    justify-self: center;
-    width: 100px;
-    height: 200px;
-    border-radius: 8px;
-    border-color: #333;
-    background-color: #f0f0f0;
-    overflow: hidden;
+  position: relative;
+  width: 100px;
+  height: 200px;
+  border: 4px solid #333;
+  border-radius: 8px;
+  margin: 20px auto;
+  background-color: #f0f0f0;
+  justify-self: center;
 }
 
 .bateria-nivel {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0%;
-    background-color: #4caf50;
-    transition: height 0.5s ease;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background-color: #4caf50;
+  transition: height 0.5s ease;
 }
 
 .bateria-tapita {
-    position: relative;
-    top: -12px;
-    left: 35%;
-    width: 30px;
-    height: 12px;
-    background-color: #333;
-    border-radius: 4px;
+  position: relative;
+  top: -12px;
+  left: 35%;
+  width: 30px;
+  height: 12px;
+  background-color: #333;
+  border-radius: 4px;
 }
+
 .texto {
     font-size: 16px;
     margin-top: 10px;
